# parseval

./: README.md  expr_parser.py  parse_comsol.py  parse_spice.py  parser_testcases.py  pyproject.toml  requirements.txt  setup.py
data/: spice_comsol_values.csv
parseval/: __init__.py  expr_parser.py
parseval/parsers/: __init__.py  spice_parser.py
scripts/: parser_testcases.py
src/: expr_parser.py  parse_comsol.py  pyxeval.py
src/evaluators/: __init__.py
src/parsers/: __init__.py  comsol_parser.py  spice_parser.py
tests/: test_expr_parser.py
