[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "parseval"
version = "0.1.0"
description = "Parsing, evaluating, and converting mathematical expressions between COMSOL and SPICE formats."
authors = [{name = "Parseval Developers"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "asteval>=1.0.6",
    "numpy>=2.0.1",
]

[project.optional-dependencies]
dev = ["pytest>=6.0.0"]
